<package>
  <name>imu_filter_madgwick</name>
  <version>1.2.2</version>
  <description>  
  Filter which fuses angular velocities, accelerations, and (optionally) magnetic readings from a generic IMU device into an orientation. Based on code by Sebastian Madgwick, http://www.x-io.co.uk/node/8#open_source_ahrs_and_imu_algorithms.
  </description>
  <license>GPL</license>
  <url>http://ros.org/wiki/imu_filter_madgwick</url>
  <author>Ivan Dryanovski</author>
  <maintainer email="martin.guenther1980@gmail.com">Martin Günther</maintainer>
  <maintainer email="ivan.dryanovski@gmail.com">Ivan Dryanovski</maintainer>
  <maintainer email="alexis@thekobi.com">Alexis Paques</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>Eigen3</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>Eigen3</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <test_depend>rosunit</test_depend>

</package>
